# pyspark-sample

./: pyproject.toml  requirements.txt  setup.py
banking/: run_all.py
banking/steps/: ingest_bronze.py  transform_gold.py  transform_silver.py
retail/: run_all.py
retail/steps/: ingest_bronze.py  transform_gold.py  transform_silver.py
src/deploy/databricks/: databricks.yml
src/pipelines/: config.py
src/pipelines/bronze/: ingest_bronze.py
src/pipelines/gold/: transform_gold.py
src/pipelines/silver/: transform_silver.py
src/tests/: conftest.py  test_bronze.py  test_gold.py  test_silver.py
src/tests/unit/: test_silver_transforms.py
telecom/: run_all.py
telecom/steps/: ingest_bronze.py  transform_gold.py  transform_silver.py
