[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark_sample"
version = "0.1.0"
description = "A sample PySpark project"
requires-python = ">=3.9"
dependencies = [
    "pyspark==3.4.1",
    "delta-spark==2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
